--- a/app/src/main/res/layout/activity_graphview.xml
+++ b/app/src/main/res/layout/activity_graphview.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical">
@@ -16,4 +17,12 @@
         android:layout_width="match_parent"
         android:layout_height="200dp"
         android:padding="16dp" />
+
+    <com.github.zieiony.guide.graphview.GraphView2
+        android:id="@+id/graphView2"
+        android:layout_width="match_parent"
+        android:layout_height="200dp"
+        android:padding="16dp"
+        app:guide_itemColor="@color/graph_itemcolor"
+        app:guide_itemSpacing="2dp" />
 </LinearLayout>
