added FlowLayout3 with a custom layout param - guide_layout_fill

--- a/app/src/main/res/layout/activity_flowlayout.xml
+++ b/app/src/main/res/layout/activity_flowlayout.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical">
@@ -99,6 +100,54 @@
             android:layout_margin="8dp"
             android:text="Button8" />
     </com.github.zieiony.guide.flowlayout.FlowLayout2>
+
+    <View
+        android:layout_width="match_parent"
+        android:layout_height="0.5dp"
+        android:background="#7f7f7f" />
+
+    <com.github.zieiony.guide.flowlayout.FlowLayout3
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:gravity="right"
+        android:padding="8dp">
+
+        <Button
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Button1" />
+
+        <Button
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_margin="8dp"
+            android:text="Button2" />
+
+        <Button
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Button3"
+            app:guide_layout_fill="true" />
+
+        <Button
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_margin="8dp"
+            android:text="Button4" />
+
+        <Button
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Button5"
+            app:guide_layout_fill="true" />
+
+        <Button
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_margin="8dp"
+            android:text="Button8"
+            app:guide_layout_fill="true" />
+    </com.github.zieiony.guide.flowlayout.FlowLayout3>
 
     <View
         android:layout_width="match_parent"
